Nota por Mes_Docente en html conectado a siderbar.js

--- a/Desarrollo/SACNS/codigo/Modulo_Docente_Frontend/2. Notas/P2.Nota por Mes_Docente.html
+++ b/Desarrollo/SACNS/codigo/Modulo_Docente_Frontend/2. Notas/P2.Nota por Mes_Docente.html
@@ -86,4 +86,211 @@
     </div>
     <div>
 
+        <div class="container bootstrap snippets bootdey" style="padding-top: 100px; padding-bottom: 100px;" >
+            <div class="row" style="background: #FFFFFF; border-radius:20px;" > 
+                <div class="col-lg-12">
+                    <div class="main-box no-header clearfix">
+                        <div class="main-box-body clearfix">
+                            <div class="table-responsive">
+                                <h1>Notas del Curso:'Curso'</h1>
+                                <h2>Grado:</h2>
+                                <h3><img src="https://img.icons8.com/color/48/000000/check-all--v1.png"/>'Grado'</h3>
+                                        <table class="table user-list">
+                                            <thead>
+                                                <tr>
+                                                <th ><span>MES</span></th>
+                                                <th ><span>ESTADO</span></th>                        
+                                                <th>&nbsp;</th>
+                                                </tr>
+                                            </thead>
+                                            <tbody>
+                                                <tr>
+                                                    <td>
+                                                        <img src="https://img.icons8.com/fluency/50/000000/course-assign.png" alt=""/>                                                      
+                                                        <span class="user-subhead">Marzo</span>
+                                                    </td>
+                                                    <td class="text-left" style="width: 40%;" >
+                                                        <span class="label label-default">Actualizado</span>
+                                                    </td>
+                                                    <td style="width:20%;">
+                                                        <a href="#" class="table-link text-info">
+                                                            <span class="fa-stack">
+                                                                <i class="fa fa-square fa-stack-2x"></i>
+                                                                <i class="fa fa-pencil fa-stack-1x fa-inverse"></i>
+                                                            </span>
+                                                        </a>
+                                                    </td>
+                                                </tr>
+                                                
+                                                <tr>
+                                                    <td>
+                                                        <img src="https://img.icons8.com/fluency/50/000000/course-assign.png" alt=""/>                                                      
+                                                        <span class="user-subhead">Abril</span>
+                                                    </td>
+                                                    <td class="text-left">
+                                                        <span class="label label-default">En Progreso</span>
+                                                    </td>
+                                                    <td style="width: 20%;">
+                                                        <a href="#" class="table-link text-info">
+                                                            <span class="fa-stack">
+                                                                <i class="fa fa-square fa-stack-2x"></i>
+                                                                <i class="fa fa-pencil fa-stack-1x fa-inverse"></i>
+                                                            </span>
+                                                        </a>
+                                                    </td>
+                                                </tr>
+                                                <tr>
+                                                    <td>
+                                                        <img src="https://img.icons8.com/fluency/50/000000/course-assign.png" alt=""/>                                                      
+                                                        <span class="user-subhead">Mayo</span>
+                                                    </td>
+                                                    <td class="text-left">
+                                                        <span class="label label-default">Pendiente</span>
+                                                    </td>
+                                                    <td style="width: 20%;">
+                                                        <a href="#" class="table-link text-info">
+                                                            <span class="fa-stack">
+                                                                <i class="fa fa-square fa-stack-2x"></i>
+                                                                <i class="fa fa-pencil fa-stack-1x fa-inverse"></i>
+                                                            </span>
+                                                        </a>
+                                                    </td>
+                                                </tr>
+                                                
+                                                <tr>
+                                                    <td>
+                                                        <img src="https://img.icons8.com/fluency/50/000000/course-assign.png" alt=""/>                                                      
+                                                        <span class="user-subhead">Junio</span>
+                                                    </td>
+                                                    <td class="text-left">
+                                                        <span class="label label-default">En Progreso</span>
+                                                    </td>
+                                                    <td style="width: 20%;">
+                                                        <a href="#" class="table-link text-info">
+                                                            <span class="fa-stack">
+                                                                <i class="fa fa-square fa-stack-2x"></i>
+                                                                <i class="fa fa-pencil fa-stack-1x fa-inverse"></i>
+                                                            </span>
+                                                        </a>
+                                                    </td>
+                                                </tr>
+                                                <tr>
+                                                    <td>
+                                                        <img src="https://img.icons8.com/fluency/50/000000/course-assign.png" alt=""/>                                                      
+                                                        <span class="user-subhead">Julio</span>
+                                                    </td>
+                                                    <td class="text-left">
+                                                        <span class="label label-default">Pendiente</span>
+                                                    </td>
+                                                    <td style="width: 20%;">
+                                                        <a href="#" class="table-link text-info">
+                                                            <span class="fa-stack">
+                                                                <i class="fa fa-square fa-stack-2x"></i>
+                                                                <i class="fa fa-pencil fa-stack-1x fa-inverse"></i>
+                                                            </span>
+                                                        </a>
+                                                    </td>
+                                                </tr>
+
+                                                <tr>
+                                                    <td>
+                                                        <img src="https://img.icons8.com/fluency/50/000000/course-assign.png" alt=""/>                                                      
+                                                        <span class="user-subhead">Agosto</span>
+                                                    </td>
+                                                    <td class="text-left">
+                                                        <span class="label label-default">En Progreso</span>
+                                                    </td>
+                                                    <td style="width: 20%;">
+                                                        <a href="#" class="table-link text-info">
+                                                            <span class="fa-stack">
+                                                                <i class="fa fa-square fa-stack-2x"></i>
+                                                                <i class="fa fa-pencil fa-stack-1x fa-inverse"></i>
+                                                            </span>
+                                                        </a>
+                                                    </td>
+                                                </tr>
+                                                <tr>
+                                                    <td>
+                                                        <img src="https://img.icons8.com/fluency/50/000000/course-assign.png" alt=""/>                                                      
+                                                        <span class="user-subhead">Setiembre</span>
+                                                    </td>
+                                                    <td class="text-left">
+                                                        <span class="label label-default">Pendiente</span>
+                                                    </td>
+                                                    <td style="width: 20%;">
+                                                        <a href="#" class="table-link text-info">
+                                                            <span class="fa-stack">
+                                                                <i class="fa fa-square fa-stack-2x"></i>
+                                                                <i class="fa fa-pencil fa-stack-1x fa-inverse"></i>
+                                                            </span>
+                                                        </a>
+                                                    </td>
+                                                </tr>
+
+                                                <tr>
+                                                    <td>
+                                                        <img src="https://img.icons8.com/fluency/50/000000/course-assign.png" alt=""/>                                                      
+                                                        <span class="user-subhead">Octubre</span>
+                                                    </td>
+                                                    <td class="text-left">
+                                                        <span class="label label-default">En Progreso</span>
+                                                    </td>
+                                                    <td style="width: 20%;">
+                                                        <a href="#" class="table-link text-info">
+                                                            <span class="fa-stack">
+                                                                <i class="fa fa-square fa-stack-2x"></i>
+                                                                <i class="fa fa-pencil fa-stack-1x fa-inverse"></i>
+                                                            </span>
+                                                        </a>
+                                                    </td>
+                                                </tr>
+                                                <tr>
+                                                    <td>
+                                                        <img src="https://img.icons8.com/fluency/50/000000/course-assign.png" alt=""/>                                                      
+                                                        <span class="user-subhead">Noviembre</span>
+                                                    </td>
+                                                    <td class="text-left">
+                                                        <span class="label label-default">Pendiente</span>
+                                                    </td>
+                                                    <td style="width: 20%;">
+                                                        <a href="#" class="table-link text-info">
+                                                            <span class="fa-stack">
+                                                                <i class="fa fa-square fa-stack-2x"></i>
+                                                                <i class="fa fa-pencil fa-stack-1x fa-inverse"></i>
+                                                            </span>
+                                                        </a>
+                                                    </td>
+                                                </tr>
+                                                <tr>
+                                                    <td>
+                                                        <img src="https://img.icons8.com/fluency/50/000000/course-assign.png" alt=""/>                                                      
+                                                        <span class="user-subhead">Diciembre</span>
+                                                    </td>
+                                                    <td class="text-left">
+                                                        <span class="label label-default">Pendiente</span>
+                                                    </td>
+                                                    <td style="width: 20%;">
+                                                        <a href="#" class="table-link text-info">
+                                                            <span class="fa-stack">
+                                                                <i class="fa fa-square fa-stack-2x"></i>
+                                                                <i class="fa fa-pencil fa-stack-1x fa-inverse"></i>
+                                                            </span>
+                                                        </a>
+                                                    </td>
+                                                </tr>
+
+                                            </tbody>
+                                        </table>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+
+
+        <script src="..\0. SideBar\sidebar.js"></script>
+
+
 </body>
