primera parte de la tabla de asistencia

--- a/Desarrollo/SACNS/codigo/Modulo_Docente_Frontend/3. Asistencia/P1.Asistencia.html
+++ b/Desarrollo/SACNS/codigo/Modulo_Docente_Frontend/3. Asistencia/P1.Asistencia.html
@@ -78,3 +78,26 @@
             </li>
         </ul>
     </div>
+    
+    <div class="container p-5 mt-4 ">
+        <div class="container-fluid p-0">
+        <h1 class="h3">Asistencia de Salones a Cargo</h1>
+        <div class="row">
+          <div class="col-xl-8">
+            <div class="card">
+              <div class="card-header pb-0">
+                <h4 class="subtext">Grado :</h4>
+                <h6 class="sub2"><img src="../Imagenes/chack.png" width="30" height="30" class="rounded-circle my-n1" alt="Avatar"> Numero de Cursos</h6>
+              </div>
+              <div class="card-body">
+                <table class="table table-striped" style="width:100%" style="height:100;">
+                  <thead>
+                    <tr>
+                      <th>#</th>
+                      <th>Curso</th>
+                      <th>Docente</th>
+                      <th>Estado</th>
+                      <th>Ingresar</th>
+                    </tr>
+                  </thead>
+                  <tbody>
