segunda parte de tabla asistencia

--- a/Desarrollo/SACNS/codigo/Modulo_Docente_Frontend/3. Asistencia/P1.Asistencia.html
+++ b/Desarrollo/SACNS/codigo/Modulo_Docente_Frontend/3. Asistencia/P1.Asistencia.html
@@ -101,3 +101,49 @@
                     </tr>
                   </thead>
                   <tbody>
+                    <tr>
+                        <td><img src="../Imagenes/mate.jpg" width="32" height="32" class="rounded-circle my-n1" alt="Avatar"></td>
+                        <td>Matematica</td>
+                        <td>Grado</td>
+                        <td><div class="progress" style="height: 3px;">
+                          <div class="progress-bar" role="progressbar" style="width: 25%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
+                        </div>25%</td>
+                        <td><button type="button" class="btn btn-primary btn-sm">Registrar</button></td>
+                      </tr>
+                      <tr>
+                        <td><img src="../Imagenes/lengu.png" width="32" height="32" class="rounded-circle my-n1" alt="Avatar"></td>
+                        <td>Lenguaje</td>
+                        <td>Grado</td>
+                        <td><div class="progress" style="height: 3px;">
+                          <div class="progress-bar" role="progressbar" style="width: 25%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
+                        </div>25%</td>
+                        <td><button type="button" class="btn btn-primary btn-sm">Registrar</button></td>
+                      </tr>
+                      <tr>
+                        <td><img src="../Imagenes/quimica.jpg" width="32" height="32" class="rounded-circle my-n1" alt="Avatar"></td>
+                        <td> Quimica </td>
+                        <td>Grado</td>
+                        <td><div class="progress" style="height: 3px;">
+                          <div class="progress-bar" role="progressbar" style="width: 25%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
+                        </div>25%</td>
+                        <td><button type="button" class="btn btn-primary btn-sm">Registrar</button></td>
+                      </tr>
+                      <tr>
+                        <td><img src="../Imagenes/libro-abierto.png" width="32" height="32" class="rounded-circle my-n1" alt="Avatar"></td>
+                        <td>Literatura</td>
+                        <td>Grado</td>
+                        <td><div class="progress" style="height: 3px;">
+                          <div class="progress-bar" role="progressbar" style="width: 25%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
+                        </div>25%</td>
+                        <td><button type="button" class="btn btn-primary btn-sm">Registrar</button></td>
+                      </tr>
+                      <tr>
+                        <td><img src="../Imagenes/fisiscas.jpg" width="32" height="32" class="rounded-circle my-n1" alt="Avatar"></td>
+                        <td>Fisica</td>
+                        <td>Grado</td>
+                        <td><div class="progress" style="height: 3px;">
+                          <div class="progress-bar" role="progressbar" style="width: 25%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
+                        </div>25%</td>
+                        <td><button type="button" class="btn btn-primary btn-sm">Registrar</button></td>
+                      </tr>
+                      <tr>   
