cabecera de la tabla de notas en el archivo .html

--- a/Desarrollo/SACNS/codigo/Modulo_Docente_Frontend/2. Notas/P3.Tabla de Notas por Mes_Docente.html
+++ b/Desarrollo/SACNS/codigo/Modulo_Docente_Frontend/2. Notas/P3.Tabla de Notas por Mes_Docente.html
@@ -86,7 +86,28 @@
         </ul>
     </div>
     <div>
-        
+        <div class="container bootstrap snippets bootdey" style="padding-top: 100px; padding-bottom: 100px;" >
+            <div class="row" style="background: #FFFFFF; border-radius:20px;" > 
+                <div class="col-lg-12">
+                    <div class="main-box no-header clearfix">
+                        <div class="main-box-body clearfix">
+                            <div class="table-responsive">
+                                <h1>Curso:'Curso'</h1>
+                                <h2>Grado:'Grado'</h2>
+                                <h2>Mes:'Mes'</h2>
+                                        <table class="table user-list">
+                                            <thead>
+                                                <tr>
+                                                <th ><span>MES</span></th>                                                
+                                                <th class="text-center" ><span>NOTA 1</span></th>
+                                                <th class="text-center" ><span>NOTA 2</span></th>
+                                                <th class="text-center" ><span>NOTA 3</span></th> 
+                                                <th class="text-center" ><span>NOTA 4</span></th> 
+                                                <th class="text-center" ><span>PROMEDIO</span></th>                      
+                                                <th class="text-center" >&nbsp;</th>
+                                                </tr>
+                                            </thead>
+                                            <tbody>
 
 
 
