--- a/Desarrollo/SACNS/codigo/Modulo_Docente_Frontend/2. Notas/P3.Tabla de Notas por Mes_Docente.html
+++ b/Desarrollo/SACNS/codigo/Modulo_Docente_Frontend/2. Notas/P3.Tabla de Notas por Mes_Docente.html
@@ -109,6 +109,76 @@
                                             </thead>
                                             <tbody>
 
+                                                <tr>
+                                                    <td>                                                     
+                                                        <span class="user-subhead">Apellido1 Apellido2, Nombre1 Nombre2</span>
+                                                    </td>
+                                                    <td class="text-center"; >
+                                                        <span class="label label-default">11</span>
+                                                    </td>
+                                                    <td class="text-center" >
+                                                        <span class="label label-default">11</span>
+                                                    </td>
+                                                    <td class="text-center">
+                                                        <span class="label label-default">11</span>
+                                                    </td>
+                                                    <td class="text-center">
+                                                        <span class="label label-default">11</span>
+                                                    </td>
+                                                    <td class="text-center" style="width:20%;">
+                                                        <span class="label label-default">11</span>
+                                                    </td>
+                                                    <td >
+                                                        <a href="htt://sitioweb.com/a"><button class="btn btn-info" style="background: #4FD1C5; color: #FFFFFF;">Grabar</button></a>
+                                                    </td>
+                                                </tr>
+                                                <tr>
+                                                    <td>                                                     
+                                                        <span class="user-subhead">Alumno2</span>
+                                                    </td>
+                                                    <td class="text-center" >
+                                                        <span class="label label-default">11</span>
+                                                    </td>
+                                                    <td class="text-center" >
+                                                        <span class="label label-default">11</span>
+                                                    </td>
+                                                    <td class="text-center">
+                                                        <span class="label label-default">11</span>
+                                                    </td>
+                                                    <td class="text-center">
+                                                        <span class="label label-default">11</span>
+                                                    </td>
+                                                    <td class="text-center">
+                                                        <span class="label label-default">11</span>
+                                                    </td>
+                                                    <td >
+                                                        <a href="htt://sitioweb.com/a"><button class="btn btn-info" style="background: #4FD1C5; color: #FFFFFF;">Grabar</button></a>
+                                                    </td>
+                                                </tr>
+                                                <tr>
+                                                    <td>                                                     
+                                                        <span class="user-subhead">Alumno3</span>
+                                                    </td>
+                                                    <td class="text-center" >
+                                                        <span class="label label-default">11</span>
+                                                    </td>
+                                                    <td class="text-center" >
+                                                        <span class="label label-default">11</span>
+                                                    </td>
+                                                    <td class="text-center">
+                                                        <span class="label label-default">11</span>
+                                                    </td>
+                                                    <td class="text-center">
+                                                        <span class="label label-default">11</span>
+                                                    </td>
+                                                    <td class="text-center">
+                                                        <span class="label label-default">11</span>
+                                                    </td>
+                                                    <td >
+                                                        <a href="htt://sitioweb.com/a"><button class="btn btn-info" style="background: #4FD1C5; color: #FFFFFF;">Grabar</button></a>
+                                                    </td>
+                                                </tr>
+                                                <tr>
 
 
 </body>
