Se hizo la conexión con el archivo sidebar.js

--- a/Desarrollo/SACNS/codigo/Modulo_Docente_Frontend/2. Notas/P3.Tabla de Notas por Mes_Docente.html
+++ b/Desarrollo/SACNS/codigo/Modulo_Docente_Frontend/2. Notas/P3.Tabla de Notas por Mes_Docente.html
@@ -179,6 +179,175 @@
                                                     </td>
                                                 </tr>
                                                 <tr>
+                                                    <td>                                                     
+                                                        <span class="user-subhead">Alumno4</span>
+                                                    </td>
+                                                    <td class="text-center" >
+                                                        <span class="label label-default">11</span>
+                                                    </td>
+                                                    <td class="text-center" >
+                                                        <span class="label label-default">11</span>
+                                                    </td>
+                                                    <td class="text-center">
+                                                        <span class="label label-default">11</span>
+                                                    </td>
+                                                    <td class="text-center">
+                                                        <span class="label label-default">11</span>
+                                                    </td>
+                                                    <td class="text-center">
+                                                        <span class="label label-default">11</span>
+                                                    </td>
+                                                    <td >
+                                                        <a href="htt://sitioweb.com/a"><button class="btn btn-info" style="background: #4FD1C5; color: #FFFFFF;">Grabar</button></a>
+                                                    </td>
+                                                </tr>
+                                                <tr>
+                                                    <td>                                                     
+                                                        <span class="user-subhead">Alumno5</span>
+                                                    </td>
+                                                    <td class="text-center" >
+                                                        <span class="label label-default">11</span>
+                                                    </td>
+                                                    <td class="text-center" >
+                                                        <span class="label label-default">11</span>
+                                                    </td>
+                                                    <td class="text-center">
+                                                        <span class="label label-default">11</span>
+                                                    </td>
+                                                    <td class="text-center">
+                                                        <span class="label label-default">11</span>
+                                                    </td>
+                                                    <td class="text-center">
+                                                        <span class="label label-default">11</span>
+                                                    </td>
+                                                    <td >
+                                                        <a href="htt://sitioweb.com/a"><button class="btn btn-info" style="background: #4FD1C5; color: #FFFFFF;">Grabar</button></a>
+                                                    </td>
+                                                </tr>
+                                                <tr>
+                                                    <td>                                                     
+                                                        <span class="user-subhead">Alumno6</span>
+                                                    </td>
+                                                    <td class="text-center" >
+                                                        <span class="label label-default">11</span>
+                                                    </td>
+                                                    <td class="text-center" >
+                                                        <span class="label label-default">11</span>
+                                                    </td>
+                                                    <td class="text-center">
+                                                        <span class="label label-default">11</span>
+                                                    </td>
+                                                    <td class="text-center">
+                                                        <span class="label label-default">11</span>
+                                                    </td>
+                                                    <td class="text-center">
+                                                        <span class="label label-default">11</span>
+                                                    </td>
+                                                    <td >
+                                                        <a href="htt://sitioweb.com/a"><button class="btn btn-info" style="background: #4FD1C5; color: #FFFFFF;">Grabar</button></a>
+                                                    </td>
+                                                </tr>
+                                                <tr>
+                                                    <td>                                                     
+                                                        <span class="user-subhead">Alumno7</span>
+                                                    </td>
+                                                    <td class="text-center" >
+                                                        <span class="label label-default">11</span>
+                                                    </td>
+                                                    <td class="text-center" >
+                                                        <span class="label label-default">11</span>
+                                                    </td>
+                                                    <td class="text-center">
+                                                        <span class="label label-default">11</span>
+                                                    </td>
+                                                    <td class="text-center">
+                                                        <span class="label label-default">11</span>
+                                                    </td>
+                                                    <td class="text-center">
+                                                        <span class="label label-default">11</span>
+                                                    </td>
+                                                    <td >
+                                                        <a href="htt://sitioweb.com/a"><button class="btn btn-info" style="background: #4FD1C5; color: #FFFFFF;">Grabar</button></a>
+                                                    </td>
+                                                </tr>
+                                                <tr>
+                                                    <td>                                                     
+                                                        <span class="user-subhead">Alumno8</span>
+                                                    </td>
+                                                    <td class="text-center" >
+                                                        <span class="label label-default">11</span>
+                                                    </td>
+                                                    <td class="text-center" >
+                                                        <span class="label label-default">11</span>
+                                                    </td>
+                                                    <td class="text-center">
+                                                        <span class="label label-default">11</span>
+                                                    </td>
+                                                    <td class="text-center">
+                                                        <span class="label label-default">11</span>
+                                                    </td>
+                                                    <td class="text-center">
+                                                        <span class="label label-default">11</span>
+                                                    </td>
+                                                    <td >
+                                                        <a href="htt://sitioweb.com/a"><button class="btn btn-info" style="background: #4FD1C5; color: #FFFFFF;">Grabar</button></a>
+                                                    </td>
+                                                </tr>
+                                                <tr>
+                                                    <td>                                                     
+                                                        <span class="user-subhead">Alumno9</span>
+                                                    </td>
+                                                    <td class="text-center" >
+                                                        <span class="label label-default">11</span>
+                                                    </td>
+                                                    <td class="text-center" >
+                                                        <span class="label label-default">11</span>
+                                                    </td>
+                                                    <td class="text-center">
+                                                        <span class="label label-default">11</span>
+                                                    </td>
+                                                    <td class="text-center">
+                                                        <span class="label label-default">11</span>
+                                                    </td>
+                                                    <td class="text-center">
+                                                        <span class="label label-default">11</span>
+                                                    </td>
+                                                    <td >
+                                                        <a href="htt://sitioweb.com/a"><button class="btn btn-info" style="background: #4FD1C5; color: #FFFFFF;">Grabar</button></a>
+                                                    </td>
+                                                </tr>
+                                                <tr>
+                                                    <td>                                                     
+                                                        <span class="user-subhead">Alumno10</span>
+                                                    </td>
+                                                    <td class="text-center" >
+                                                        <span class="label label-default">11</span>
+                                                    </td>
+                                                    <td class="text-center" >
+                                                        <span class="label label-default">11</span>
+                                                    </td>
+                                                    <td class="text-center">
+                                                        <span class="label label-default">11</span>
+                                                    </td>
+                                                    <td class="text-center">
+                                                        <span class="label label-default">11</span>
+                                                    </td>
+                                                    <td class="text-center">
+                                                        <span class="label label-default">11</span>
+                                                    </td>
+                                                    <td >
+                                                        <a href="htt://sitioweb.com/a"><button class="btn btn-info" style="background: #4FD1C5; color: #FFFFFF;">Grabar</button></a>
+                                                    </td>
+                                                </tr>
+                                            </tbody>
+                                        </table>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <script src="..\0. SideBar\sidebar.js"></script>
 
-
+        
 </body>
