--- a/Desarrollo/SACNS/codigo/Modulo_Docente_Frontend/1. Perfil/P1.Perfil.html
+++ b/Desarrollo/SACNS/codigo/Modulo_Docente_Frontend/1. Perfil/P1.Perfil.html
@@ -97,6 +97,31 @@
                 </div>
             </div>
         </div>
+        <div class="datosper">
+            <div class="row">
+                <div class="bio-desk">
+                    <div class="panel">
+                        <h4 class="red">Información Personal</h4>
+                        <p>Nombre Completo:</p>
+                        <p>Edad:</p>
+                        <p>Teléfono:</p>
+                        <p>Correo electronico:</p>
+                        <p>Dirección:</p>
+                        <p>DNI:</p>
+                        <p>Tipo de Usuario:</p>
+                    </div>
+                </div>
+                <div class="bio-desk">
+                    <div class="panel">
+                        <h4 class="terques">Datos Academicos </h4>
+                        <p>Código: </p>
+                        <p>Correo Institucional:</p>
+                        <p>Especialidad:</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+
     </div>
 
     <script src="../0. SideBar/sidebar.js"></script>
