--- a/Desarrollo/SACNS/codigo/Modulo_Docente_Frontend/4. Observaciones/P1.Observaciones.html
+++ b/Desarrollo/SACNS/codigo/Modulo_Docente_Frontend/4. Observaciones/P1.Observaciones.html
@@ -31,3 +31,37 @@
         }
     </style>
 </head>
+<body>
+    <div class="sidebar">
+      <div class="logo-details">
+          <div id="logoprin" class='bx bxs-graduation icon' color="blue"></div>
+          <div class="logo_name">E. SAN MARCOS</div>
+          <i class='bx bx-menu' id="btn"></i>
+      </div>
+      <ul class="nav-list d-none" id="nav-list">
+          <li>
+              <a href="#" onclick="">
+                  <i class='bx bx-building-house'></i>
+                  <span class="links_name">Principal</span>
+              </a>
+              <span class="tooltip">Principal</span>
+          </li>
+          <li>
+              <a href="#">
+                  <i class='bx bx-notepad'></i>
+                  <span class="links_name">Ingreso de Notas</span>
+              </a>
+              <span class="tooltip">Notas</span>
+          </li>
+          <li>
+              <a href="#">
+                  <i class='bx bxs-x-square'></i>
+                  <span class="links_name">Registro de Faltas</span>
+              </a>
+              <span class="tooltip">Faltas</span>
+          </li>
+          <li>
+              <a href="#">
+                  <i class='bx bx-file-find'></i>
+                  <span class="links_name">Generar Observaciones</span>
+              </a>
