--- a/Desarrollo/SACNS/codigo/Modulo_Docente_Frontend/4. Observaciones/P1.Observaciones.html
+++ b/Desarrollo/SACNS/codigo/Modulo_Docente_Frontend/4. Observaciones/P1.Observaciones.html
@@ -97,3 +97,29 @@
       </ul>
   </div>
    
+  <div class="container mt-5 ml-5 p-5">
+    <div class="container-fluid p-0">
+    <h1 class="h3">Observaciones de Salones a cargo</h1>
+    <div class="row">
+      <div class="col-xl-8">
+        <div class="card">
+          <div class="card-header pb-0">
+            <div class="card-actions float-right">
+              
+            </div>
+            <h4 class="subtext">Grado :</h4>
+
+            <h6 class="sub2"><img src="../Imagenes/chack.png" width="30" height="30" class="rounded-circle my-n1" alt="Avatar"> Numero de Cursos</h6>
+          </div>
+          <div class="card-body">
+            <table class="table table-striped" style="width:100%" style="height:100;">
+              <thead>
+                <tr>
+                  <th>#</th>
+                  <th>Curso</th>
+                  <th>Grado</th>
+                  <th>Estado</th>
+                  <th> </th>
+                </tr>
+              </thead>
+              <tbody>
