--- a/Desarrollo/SACNS/codigo/Modulo_Docente_Frontend/4. Observaciones/P2.Registrar osbservaciones.html
+++ b/Desarrollo/SACNS/codigo/Modulo_Docente_Frontend/4. Observaciones/P2.Registrar osbservaciones.html
@@ -34,3 +34,47 @@
               </a>
               <span class="tooltip">Notas</span>
           </li>
+          <li>
+            <a href="#">
+                <i class='bx bxs-x-square'></i>
+                <span class="links_name">Registro de Faltas</span>
+            </a>
+            <span class="tooltip">Faltas</span>
+        </li>
+        <li>
+            <a href="#">
+                <i class='bx bx-file-find'></i>
+                <span class="links_name">Generar Observaciones</span>
+            </a>
+            <span class="tooltip">Observaciones</span>
+        </li>
+        <div id="hogar">
+            <p>Tu cuenta</p>
+        </div>
+        <li>
+            <a href="#">
+                <i class='bx bxs-wrench'></i>
+                <span class="links_name">Editar</span>
+            </a>
+            <span class="tooltip">Editar</span>
+        </li>
+        <li>
+            <a href="#">
+                <i class='bx bx-exit'></i>
+                <span class="links_name">Salir</span>
+            </a>
+            <span class="tooltip">Salir</span>
+        </li>
+        <div id="hogar2">
+            <p>Documentación</p>
+        </div>
+        <li>
+            <a href="#">
+                <i class='bx bx-help-circle'></i>
+                <span class="links_name">Ayuda</span>
+            </a>
+            <span class="tooltip">Ayuda</span>
+        </li>
+    </ul>
+</div>
+ 
