--- a/Desarrollo/SACNS/codigo/Modulo_Docente_Frontend/4. Observaciones/P2.Registrar osbservaciones.html
+++ b/Desarrollo/SACNS/codigo/Modulo_Docente_Frontend/4. Observaciones/P2.Registrar osbservaciones.html
@@ -77,4 +77,36 @@
         </li>
     </ul>
 </div>
- 
+
+<div class="container p-3 mt-5">
+    <div class="container-fluid p-0">
+    <div class="row">
+      <div class="col-xl-8">
+        <div class="card">
+
+          <div class="card-header pb-0 ">
+             <h4 class="mt-3" style="font-size: 25px; font-weight: 100; color: #2D3748;">Observaciones Curso: 'Matemática'</h1>
+            <h4 class="subtext" style="font-size: 20px; font-weight: 100; color: #2D3748;">Grado :</h4>
+
+            <h6 class="sub2" style="color: #A0AEC0"><img src="../Imagenes/chack.png" width="30" height="30" class="rounded-circle my-n1" alt="Avatar"> 5to de Secundaria</h6>
+          </div>
+          <div class="card-body mt-3">
+              <div class="container justify-content-center">
+                  <div class="row">
+                      <div class="col-md-18">
+                          <div class="input-group mb-3"> <input type="text" class="form-control input-text" placeholder="DNI a buscar...." aria-label="Recipient's username" aria-describedby="basic-addon2">
+                              <div class="input-group-append"> <button class="btn btn-outline-dark btn-lg" type="button"><i class='bx bx-search-alt-2' ></i></button> </div>
+                          </div>
+                      </div>
+                  </div>
+              </div>
+
+              <div class="container justify-content-center m-2 p-4" id="datos">
+                  <h6 class="sub2"><img src="..\Imagenes\profile.jpg" width="30" height="30" class="rounded-circle my-n1" alt="Avatar" style="margin-right: 10px;">José Carlos Pepe Mariano</h6>
+                  <form>
+                      <div class="form-group">
+                          <label>Observación</label>
+                          <textarea class="form-control" style="height: 120px;"></textarea>
+                      </div>
+                  </form>
+              </div>
