--- a/Desarrollo/SACNS/codigo/Modulo_Docente_Frontend/3. Asistencia/P2.Registrar asistencia.html
+++ b/Desarrollo/SACNS/codigo/Modulo_Docente_Frontend/3. Asistencia/P2.Registrar asistencia.html
@@ -78,3 +78,25 @@
             </li>
         </ul>
     </div>
+    
+        <div class="container m-6 p-5">
+                <div class="row">
+                    <div class="col-lg-12">
+                        <div class="main-box no-header clearfix">
+                            <div class="main-box-body clearfix">
+                                <div class="table-responsive" style="overflow: auto;"
+                                    <h1>Notas del Curso:'Matemática'</h1>
+                                    <h2>Curso:</h2>
+                                    <h3><img src="https://img.icons8.com/color/48/000000/check-all--v1.png"/>'Curso'</h3>
+                                            <table class="table user-list">
+                                                <thead>
+                                                    <tr>
+                                                    <th ><span>NOMBRES</span></th>
+                                                    <th ><span>ESTADO</span></th>                         
+                                                    </tr>
+                                                </thead>
+                                            </table>
+                                </div>
+                        </div>
+                    </div>
+        </div>
