--- a/Desarrollo/SACNS/codigo/Modulo_Docente_Frontend/2. Notas/P1.Cursos_cargo_Docente.html
+++ b/Desarrollo/SACNS/codigo/Modulo_Docente_Frontend/2. Notas/P1.Cursos_cargo_Docente.html
@@ -121,3 +121,97 @@
                     <th> </th>
                   </tr>
                 </thead>
+                <tbody>
+                  <tr id="lol">
+                    <td><img src="..\Imagenes/mate.jpg" width="32" height="32" class="rounded-circle my-n1" alt="Avatar"></td>
+                    <td>Matematica</td>
+                    <td>6to Grado</td>
+                    <td><div class="progress" style="height: 3px;">
+                      <div class="progress-bar" role="progressbar" style="width: 25%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
+                    </div>25%</td>
+                    <td> <div class="btn custom-btn vertical">
+                      ...
+                  </div></td>
+                  </tr>
+                  <tr>
+                    <td><img src="..\Imagenes/mate.jpg" width="32" height="32" class="rounded-circle my-n1" alt="Avatar"></td>
+                    <td>Matematica</td>
+                    <td>5to Grado</td>
+                    <td><div class="progress" style="height: 3px;">
+                      <div class="progress-bar" role="progressbar" style="width: 25%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
+                    </div>25%</td>
+                    <td> <div class="btn custom-btn vertical">
+                      ...
+                  </div></td>
+                  </tr>
+                  <tr>
+                    <td><img src="..\Imagenes/mate.jpg" width="32" height="32" class="rounded-circle my-n1" alt="Avatar"></td>
+                    <td>Matematica</td>
+                    <td>4to Grado</td>
+                    <td><div class="progress" style="height: 3px;">
+                      <div class="progress-bar" role="progressbar" style="width: 25%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
+                    </div>25%</td>
+                    <td> <div class="btn custom-btn vertical">
+                      ...
+                  </div></td>
+                  </tr>
+                  <tr>
+                    <td><img src="..\Imagenes/mate.jpg" width="32" height="32" class="rounded-circle my-n1" alt="Avatar"></td>
+                    <td>Matematica</td>
+                    <td>3to Grado</td>
+                    <td><div class="progress" style="height: 3px;">
+                      <div class="progress-bar" role="progressbar" style="width: 25%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
+                    </div>25%</td>
+                    <td> <div class="btn custom-btn vertical">
+                      ...
+                  </div></td>
+                  </tr>
+                  <tr>
+                    <td><img src="..\Imagenes/mate.jpg" width="32" height="32" class="rounded-circle my-n1" alt="Avatar"></td>
+                    <td>Matematica</td>
+                    <td>2do Grado</td>
+                    <td><div class="progress" style="height: 3px;">
+                      <div class="progress-bar" role="progressbar" style="width: 25%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
+                    </div>25%</td>
+                    <td> <div class="btn custom-btn vertical">
+                      ...
+                  </div></td>
+                  </tr>
+                  <tr>
+                    <td><img src="..\Imagenes/mate.jpg" width="32" height="32" class="rounded-circle my-n1" alt="Avatar"></td>
+                    <td>Matematica</td>
+                    <td>1er Grado</td>
+                    <td><div class="progress" style="height: 3px;">
+                      <div class="progress-bar" role="progressbar" style="width: 25%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
+                    </div>25%</td>
+                    <td> <div class="btn custom-btn vertical">
+                      ...
+                  </div></td>
+                  </tr>
+                  
+                </tbody>
+              </table>
+            </div>
+          </div>
+        </div>
+  
+        
+      </div>
+  
+    </div>
+  </div>
+
+
+    <!-- Optional JavaScript; choose one of the two! -->
+
+    <!-- Option 1: Bootstrap Bundle with Popper -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+    <script src="..\0. SideBar\sidebar.js"></script>
+
+    <!-- Option 2: Separate Popper and Bootstrap JS -->
+    <!--
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script>
+    -->
+  </body>
+</html>
