se agrego estilo - P1.Cursos.Alumno

--- a/Desarrollo/SACNS/codigo/P1.Cursos.Alumno.html
+++ b/Desarrollo/SACNS/codigo/P1.Cursos.Alumno.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="es">
 
+<head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
@@ -11,5 +12,31 @@
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link href="assets/css/P1.Cursos.Alumno.css" rel="stylesheet">
     <link rel="stylesheet" href="assets\css\sidebar.css">
+
+    <style type="text/css">
+        .btn {
+            display: inline-block;
+            font-size: 1rem;
+            padding: .0.5rem;
+        }
+
+
+        .btn:hover {
+            cursor: pointer;
+        }
+
+        .custom-btn {
+            font-family: monospace;
+            margin: 0.5rem;
+            padding-top: .0.5rem;
+        }
+
+        .vertical {
+            transform: rotate(-90deg);
+        }
+
+    </style>
+
+</head>
 
 </html>
