--- a/Desarrollo/SACNS/codigo/P1.Cursos.Alumno.html
+++ b/Desarrollo/SACNS/codigo/P1.Cursos.Alumno.html
@@ -104,7 +104,89 @@
         </ul>
     </div>
 
-
+    <div class="container mt-5 ml-5 p-5">
+        <div class="container-fluid p-0">
+            <h1 class="h3">Mis Cursos</h1>
+            <div class="row">
+                <div class="col-xl-8">
+                    <div class="card">
+                        <div class="card-header pb-0">
+                            <div class="card-actions float-right"></div>
+                            <h4 class="subtext">Grado: 'Grado'</h4>
+                            <h6 class="sub2"><img src="assets/img/chack.png" alt=" " width="30" height="30"
+                                    class="rounded-circle my-n1" alt="Avatar"> &nbsp; 5 Cursos</h6>
+                        </div>
+                        <div class="card-body">
+                            <table class="table table-striped" style="width:100%" style="height:100;">
+                                <thead>
+                                    <tr>
+                                        <th>#</th>
+                                        <th style="width: 20%;">Curso</th>
+                                        <th style="width: 40%;">Docente</th>
+                                        <th>Estado</th>
+                                        <th style="width: 5%;"> </th>
+                                    </tr>
+                                </thead>
+                                <tbody>
+                                    <tr id="lol">
+                                        <td><img src="assets/img/matema.jpg" width="32" height="32"
+                                                class="rounded-circle my-n1" alt="Avatar"></td>
+                                        <td>Matematica</td>
+                                        <td>Apellido1 Apellido2, Nombre1 Nombre2</td>
+                                        <td>
+                                            <div class="progress" style="height: 3px;">
+                                                <div class="progress-bar" role="progressbar" style="width: 25%;"
+                                                    aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
+                                            </div>25%
+                                        </td>
+                                        <td>
+                                            <div class="btn custom-btn vertical">
+                                                ...
+                                            </div>
+                                        </td>
+                                    </tr>
+                                    <tr>
+                                        <td><img src="assets/img/lengu.png" width="32" height="32"
+                                                class="rounded-circle my-n1" alt="Avatar"></td>
+                                        <td>Comunicación</td>
+                                        <td>Apellido1 Apellido2, Nombre1 Nombre2</td>
+                                        <td>
+                                            <div class="progress" style="height: 3px;">
+                                                <div class="progress-bar" role="progressbar" style="width: 25%;"
+                                                    aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
+                                            </div>25%
+                                        </td>
+                                        <td>
+                                            <div class="btn custom-btn vertical">
+                                                ...
+                                            </div>
+                                        </td>
+                                    </tr>
+                                    <tr>
+                                        <td><img src="assets/img/quimica.jpg" width="32" height="32"
+                                                class="rounded-circle my-n1" alt="Avatar"></td>
+                                        <td>Ciencia, Tecnología y Ambiente</td>
+                                        <td>Apellido1 Apellido2, Nombre1 Nombre2</td>
+                                        <td>
+                                            <div class="progress" style="height: 3px;">
+                                                <div class="progress-bar" role="progressbar" style="width: 25%;"
+                                                    aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
+                                            </div>25%
+                                        </td>
+                                        <td>
+                                            <div class="btn custom-btn vertical">
+                                                ...
+                                            </div>
+                                        </td>
+                                    </tr>
+                                </tbody>
+                            </table>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 </body>
 
 </html>
